--- a/src/main/resources/templates/chat/start-chat.html
+++ b/src/main/resources/templates/chat/start-chat.html
@@ -9,9 +9,15 @@
   </head>
   <body>
     <div class="container">
-      <h1>1:1 채팅하기</h1>
+      <h1>1:1 채팅하기 user1</h1>
       <p>크리에이터에게 문의사항을 물어보세요!</p>
-      <button onclick="startChat()">1:1 채팅하기</button>
+      <button onclick="startChat1()">1:1 채팅하기</button>
+    </div>
+
+    <div class="container">
+      <h1>1:1 채팅하기 user2</h1>
+      <p>크리에이터에게 문의사항을 물어보세요!</p>
+      <button onclick="startChat2()">1:1 채팅하기</button>
     </div>
   </body>
 </html>
