--- a/src/main/resources/templates/contest/ContestView.html
+++ b/src/main/resources/templates/contest/ContestView.html
@@ -73,6 +73,12 @@
 
         <p>참여작</p>
         <p>조회수  <span th:text="${contestUploadDTO.conHit}"></span></p>
+
+        <!-- 시상하기 버튼 추가 -->
+        <a th:if="${userEmail == writer}" href="/contest/award" class="button" style="background-color: #28a745; color: white;">
+            시상하기
+        </a>
+
         <a href="/contest/list" class="button">콘테스트 목록으로</a>
         <a href="/api/users/contest/application/terms" class="button">콘테스트 참여하기</a>
     </div>
